# nano-kazen

./: .gitignore  CMakeLists.txt  LICENSE  LOG.md  PLAN.md  README.md
doc/2022_q1/: 2022_q1_overview.md  2022_q1_report.md
include/kazen/: accel.h  bbox.h  bitmap.h  block.h  bluenoise.h  bsdf.h  camera.h  color.h  common.h  define.h  dpdf.h  frame.h  hash.h  integrator.h  light.h  medium.h  mesh.h  mircofacet.h  object.h  parser.h  pcg32.h  pmj02table.h  progress.h  proplist.h  ray.h  renderer.h  rfilter.h  sampler.h  scene.h  texture.h  timer.h  transform.h  vector.h  warp.h
scene/: Credits.txt  bunny.exr  bunny.xml  bunny.xml:Zone.Identifier
scene/2022_q1/WarmStudio/: WarmStudio.xml
scene/2022_q1/parameters/: default_m0_r0.5.xml  m0.0_r0.5.xml  m0.0_r0.xml  m0.0_r1.xml  m0_r0_spec0.5.xml  m0_r0_spec0.xml  m0_r0_spec1.xml  m0_r0_spec1_st0.5.xml  m0_r0_spec1_st1.xml  m1_r0.5.xml  m1_r0.xml  m1_r1.xml  r0.5_c0.5.xml  r0.5_c0.xml  r0.5_c1.xml  r0.5_c1_cr0.5.xml  r0.5_c1_cr1.xml  r0_s0.5.xml  r0_s0.xml  r0_s1.xml  r0_s1_st0.5.xml  r0_s1_st1.xml
src/kazen/: accel.cpp  bitmap.cpp  block.cpp  bsdf.cpp  camera.cpp  common.cpp  integrator.cpp  light.cpp  main.cpp  medium.cpp  mesh.cpp  object.cpp  parser.cpp  progress.cpp  proplist.cpp  renderer.cpp  rfilter.cpp  sampler.cpp  scene.cpp  test.cpp  texture.cpp  warp.cpp
test/: CMakeLists.txt  texturesys_test.cpp
